--- a/applications/kappa/sun95.tex
+++ b/applications/kappa/sun95.tex
@@ -49446,6 +49446,60 @@ KAPPA: \htmlref{NDFTRACE}{NDFTRACE},
          accuracy is paid for by larger run times.  \texttt{[0.5]}
       }
       \sstsubsection{
+         ALIGNREF = \_LOGICAL (Read)
+      }{
+         Determines the coordinate system in which each input NDF is
+         aligned with the reference NDF. If TRUE, alignment is performed
+         in the coordinate system described by the current Frame of the WCS
+         FrameSet in the reference NDF. If FALSE, alignment is performed
+         in the coordinate system specified by the following set of WCS
+         attributes in the reference NDF: AlignSystem AlignStdOfRest,
+         AlignOffset, AlignSpecOffset, AlignSideBand, AlignTimeScale. The
+         AST library provides fixed defaults for all these. So for
+         instance, AlignSystem defaults to ICRS for celestial axes and
+         Wavelength for spectral axes, meaning that celestial axes will
+         be aligned in ICRS and spectral axes in wavelength, by default.
+         Similarly, AlignStdOfRest defaults to Heliocentric, meaning that
+         by default spectral axes will be aligned in the Heliocentric rest
+         frame.
+
+         As an example, if you are aligning two spectra which both use
+         radio velocity as the current WCS, but which have different rest
+         frequencies, then setting ALIGNREF to TRUE will cause alignment
+         to be performed in radio velocity, meaning that the differences
+         in rest frequency are ignored. That is, a channel with 10 Km/s
+         in the input is mapping onto the channel with 10 km/s in the output.
+         If ALIGNREF is FALSE (and no value has been set for the AlignSystem
+         attribute in the reference WCS), then alignment will be performed
+         in wavelength, meaning that the different rest frequencies cause
+         an additional shift. That is, a channel with 10 Km/s in the input
+         will be mapping onto which ever output channel has the same
+         wavelength, taking into account the different rest frequencies.
+
+         As another example, consider aligning two maps which both have
+         (azimuth,elevation) axes. If ALIGNREF is TRUE, then any given
+         (az,el) values in one image will be mapped onto the exact same
+         (az,el) values in the other image, regardless of whether the
+         two images were taken at the same time. But if ALIGNREF is FALSE,
+         then a given (az,el) value in one image will be mapped onto
+         pixel that has the same ICRS coordinates in the other image
+         (since AlignSystem default to ICRS for celestial axes). Thus any
+         different in the observation time of the two images will result
+         in an additional shift.
+
+         As yet another example, consider aligning two spectra which are
+         both in frequency with respect to the LSRK, but which refer to
+         different points on the sky. If ALIGNREF is TRUE, then a given
+         LSRK frequency in one spectra will be mapped onto the exact same
+         LSRK frequency in the other image, regardless of the different sky
+         positions. But if ALIGNREF is FALSE, then a given input frequency
+         will first be converted to Heliocentric frequency (the default
+         value for AlignStdOfRest is ``Heliocentric''), and will be mapped
+         onto the output channel that has the same Heliocentric frequency.
+         Thus the differecen in sky positions will result in an additional
+         shift.   \texttt{[FALSE]}
+      }
+      \sstsubsection{
          CONSERVE = \_LOGICAL (Read)
       }{
          If set \texttt{TRUE}, then the output pixel values will be scaled in
@@ -50515,6 +50569,60 @@ KAPPA: \htmlref{NDFTRACE}{NDFTRACE},
          than the value supplied for ACC (in pixels), then a smaller
          region is used.  High accuracy is paid for by longer run times.
          \texttt{[0.05]}
+      }
+      \sstsubsection{
+         ALIGNREF = \_LOGICAL (Read)
+      }{
+         Determines the coordinate system in which each input NDF is
+         aligned with the reference NDF. If TRUE, alignment is performed
+         in the coordinate system described by the current Frame of the WCS
+         FrameSet in the reference NDF. If FALSE, alignment is performed
+         in the coordinate system specified by the following set of WCS
+         attributes in the reference NDF: AlignSystem AlignStdOfRest,
+         AlignOffset, AlignSpecOffset, AlignSideBand, AlignTimeScale. The
+         AST library provides fixed defaults for all these. So for
+         instance, AlignSystem defaults to ICRS for celestial axes and
+         Wavelength for spectral axes, meaning that celestial axes will
+         be aligned in ICRS and spectral axes in wavelength, by default.
+         Similarly, AlignStdOfRest defaults to Heliocentric, meaning that
+         by default spectral axes will be aligned in the Heliocentric rest
+         frame.
+
+         As an example, if you are mosaicing two spectra which both use
+         radio velocity as the current WCS, but which have different rest
+         frequencies, then setting ALIGNREF to TRUE will cause alignment
+         to be performed in radio velocity, meaning that the differences
+         in rest frequency are ignored. That is, a channel with 10 Km/s
+         in the input is mapping onto the channel with 10 km/s in the output.
+         If ALIGNREF is FALSE (and no value has been set for the AlignSystem
+         attribute in the reference WCS), then alignment will be performed
+         in wavelength, meaning that the different rest frequencies cause
+         an additional shift. That is, a channel with 10 Km/s in the input
+         will be mapping onto which ever output channel has the same
+         wavelength, taking into account the different rest frequencies.
+
+         As another example, consider mosaicing two maps which both have
+         (azimuth,elevation) axes. If ALIGNREF is TRUE, then any given
+         (az,el) values in one image will be mapped onto the exact same
+         (az,el) values in the other image, regardless of whether the
+         two images were taken at the same time. But if ALIGNREF is FALSE,
+         then a given (az,el) value in one image will be mapped onto
+         pixel that has the same ICRS coordinates in the other image
+         (since AlignSystem default to ICRS for celestial axes). Thus any
+         different in the observation time of the two images will result
+         in an additional shift.
+
+         As yet another example, consider mosaicing two spectra which are
+         both in frequency with respect to the LSRK, but which refer to
+         different points on the sky. If ALIGNREF is TRUE, then a given
+         LSRK frequency in one spectra will be mapped onto the exact same
+         LSRK frequency in the other image, regardless of the different sky
+         positions. But if ALIGNREF is FALSE, then a given input frequency
+         will first be converted to Heliocentric frequency (the default
+         value for AlignStdOfRest is ``Heliocentric''), and will be mapped
+         onto the output channel that has the same Heliocentric frequency.
+         Thus the differecen in sky positions will result in an additional
+         shift.   \texttt{[FALSE]}
       }
       \sstsubsection{
          CONSERVE = \_LOGICAL (Read)
@@ -53855,6 +53963,18 @@ The following applications have been modified:
         \item  A new parameter QVALUE can be used to store a constant
         integer value in the range 0 to 255 in the QUALITY component for
         all pixels.
+      \end{itemize}
+
+   \item [\htmlref{WCSALIGN}{WCSALIGN}]\mbox{}
+      \begin{itemize}
+        \item  A new parameter ALIGNREF can be used to control the
+        coordinate system in which the input NDFs are aligned.
+      \end{itemize}
+
+   \item [\htmlref{WCSMOSAIC}{WCSMOSAIC}]\mbox{}
+      \begin{itemize}
+        \item  A new parameter ALIGNREF can be used to control the
+        coordinate system in which the input NDFs are aligned.
       \end{itemize}
 
 \end{description}
