convert: sun55 updated to new stardoc system.
Very straightforward. Only issue was an irritating tex stack error
when running pdflatex. This appeared to be caused by a macro (\IDLref)
that used htmladdnormallink being used within a section title. I
suspect this was an issue with having html links in the toc etc. I
fixed it by removing the macro from the section title, as I didn't
think it was necessary anyway. Possibly setting a shorttitle would
have also fixed the problem.

Defined an 'sstkeywords' section in sst.sty and sst.4ht.

Also note that '\textit' cannot be properly interpreted within an eqn,
at least by tex4ht's math handler.

--- a/applications/latexsupport/sst.sty
+++ b/applications/latexsupport/sst.sty
@@ -93,6 +93,9 @@
 \newcommand{\sstusage}[1]{\item[Usage:]{\raggedright \tt #1}}%\item[Usage:] \begin{Verbatim} #1 \end{Verbatim}}
 \newcommand{\sstparameters}[1]{\item[Parameters:]
 \begin{description}[style=nextline]\item[] #1 \end{description}}
+\newcommand{\sstkeywords}[1]{\item[Keywords:]
+\begin{description}[style=nextline]\item[] #1 \end{description}}
+
 \newcommand{\sstsubsection}[2]{\item[{#1}] #2}
 \newcommand{\sstnotes}[1]{\sstdiytopic{Notes}{#1}}
 \newcommand{\sstdiylist}[2]{\item[#1] #2}
