one: Minor fix to SUN/234

--- a/libraries/one/sun234.tex
+++ b/libraries/one/sun234.tex
@@ -86,7 +86,7 @@ The contents of the library are (in alphabetical order):\\
     {Returns successive file names that match a file specification.
     Taken from FIGARO, SST, CONVERT, KAPPA and CCDPACK.}
 \noteroutine{ONE\_FIND\_FILE\_END( CONTEXT, STATUS )}
-    {.Terminate a sequence of FIND\_FILE calls.
+    {Terminate a sequence of FIND\_FILE calls.
     Taken from FIGARO, SST, CONVERT, KAPPA and CCDPACK.}
 \noteroutine{ONE\_SCRSZ( WIDTH, HEIGHT, STATUS )}
     {A Fortran callable function to obtain the size of the output screen.
