--- a/applications/latexsupport/sst.sty
+++ b/applications/latexsupport/sst.sty
@@ -156,7 +156,7 @@
 
 \newcommand{\ssthitemlist}[1]{\mbox{}\begin{itemize}#1\end{itemize}}
 \newcommand{\sstapplicability}[1]{\sstdiytopic{Applicability}{#1}}
-\newcommand{\sstresparameters}[1]{\sstdiytopic{Res Paramaters}{#1}}
+\newcommand{\sstresparameters}[1]{\sstdiytopic{Results Parameters}{#1}}
 \newcommand{\sstarguments}[1]{\sstdiytopic{Arguments}{#1}}
 \newcommand{\sstinvocation}[1]{\sstdiytopic{Invocation}{\texttt{#1}}}
 \newcommand{\sstreturnedvalue}[1]{\sstdiytopic{Returned Value}{#1}}
